kubernetes/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-service-test
  annotations:
    # nginx ingress
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://frontend-service-test.zero-david.online"

spec:
  rules:
  - host: backend-service-test-api.zero-david.online
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: backend-service-test
            servicePort: http
  tls:
  - hosts:
    - backend-service-test-api.zero-david.online
    secretName: backend-service-test-tls-secret
